--- a/serverless.yml
+++ b/serverless.yml
@@ -68,7 +68,7 @@ functions:
   hello:
     handler: handler.hello
     layers:
-      - {Ref: oraclelibLambdaLayer}
+      - {Ref: OraclelibLambdaLayer}
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
